--- a/system/releaseNotes
+++ b/system/releaseNotes
@@ -1,4 +1,18 @@
-# Version 3.036
+# Version 3.037
+
+## Improved - Object Revisions
+
+Object revision UI is no longer in BETA and now is officially released. As part of this release the UI has been updated to include the revision creator as well as a view button that enables you to see the content of the revision without restoring the object
+
+## Fixed - Worker Killed Exception Message
+
+Added message to worker killed exception to make it clear that the failure on the status page was caused by the system killing the trigger
+
+## Fixed - Status Page Polling
+
+The status page polling improved to reduce network utilization
+
+<!-- # Version 3.036
 
 ## Features -
 
@@ -22,7 +36,7 @@ User and Group status is now enforced
 
 ### Improved root Password Reset Utility
 
-CLI reset of root user no longer requires waiting the lockout period to expire
+CLI reset of root user no longer requires waiting the lockout period to expire -->
 
 <!-- # Version 3.035
 
